<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.favourites.FavoriteEventsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/menu_filtros"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/marginTextView"
                    android:layout_marginTop="@dimen/marginTextView"
                    android:layout_marginRight="@dimen/marginTextView"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtFiltroCategoria"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Filtro categoría"
                            android:textColor="#000000"
                            android:textSize="26dp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/btnFiltroCategoriaDown"
                            android:layout_width="35dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/arrow_down"
                            android:foregroundGravity="center"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            app:srcCompat="@drawable/arrow_down" />

                        <ImageButton
                            android:id="@+id/btnFiltroCategoriaUp"
                            android:layout_width="35dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@drawable/arrow_down"
                            android:foregroundGravity="center"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:rotation="180"
                            app:srcCompat="@drawable/arrow_down" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutFiltroCategoria"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkBoxMusica"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#D90404"
                            android:text="Música"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxOnline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#7FDED8"
                            android:text="Online"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxArtesPlasticas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#FFC2C2"
                            android:text="Artes plásticas"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxFormacionTalleres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#87F692"
                            android:text="Formación/Talleres"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxArquitectura"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#BF784E"
                            android:text="Arquitectura"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxInfantil"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#F27405"
                            android:text="Infantil"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxCineAudiovisual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#313B2F"
                            android:text="Cine/Audiovisual"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxArtesEscenicas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#D90404"
                            android:text="Artes escénicas"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxCulturaCientifica"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#6AC89F"
                            android:text="Cultura científica"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxEdicionLiteratura"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#679AC2"
                            android:text="Edición/Literatura"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxFotografia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#FDFAAB"
                            android:text="Fotografía"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/checkBoxOtros"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="#C6D7CB"
                            android:text="Otros"
                            android:textSize="18dp" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Ordenar Fecha"
                        android:textColor="#000000"
                        android:textSize="26dp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rgOrdenarFecha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rbOrdenarProxima"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="Más cercana a más lejana" />

                        <RadioButton
                            android:id="@+id/rbOrdenarLejana"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Más lejana a más cercana" />

                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/checkBoxSinFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Mostrar eventos sin fecha al final" />

                    <Button
                        android:id="@+id/btnAplicarFiltroOrden"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginBottom="20dp"
                        android:text="Aplicar" />
                </LinearLayout>
            </ScrollView>

        </com.google.android.material.navigation.NavigationView>

        <ListView
            android:id="@+id/eventsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/white_grey_border_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_bar">

        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>