<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_event_icon"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/marginLogo"
        android:layout_marginTop="@dimen/marginLogo"
        android:layout_marginRight="@dimen/marginLogo"
        android:layout_marginBottom="@dimen/marginLogo"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/item_event_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/marginLogo"
        android:layout_marginTop="@dimen/marginLogo"
        android:layout_marginRight="@dimen/marginLogo"
        android:layout_marginBottom="@dimen/marginLogo"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:paddingBottom="@dimen/marginTextView">

        <TextView
            android:id="@+id/item_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_weight="1"
            android:text="TextView"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_event_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTextView"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/item_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_marginTop="@dimen/marginTextView"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_event_fav"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:clickable="true"
            android:title="@string/favourite_btn"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_baseline_star_border_24" />

        <ImageButton
            android:id="@+id/btn_add_list_event"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/ic_baseline_add_24" />
    </LinearLayout>

</LinearLayout>