<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filter_menu"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/filter_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info" />
    <item
        android:id="@+id/crear_lista"
        android:title="@string/crear_lista" />
    <item
        android:id="@+id/listaFav"
        android:title="@string/favoritos" />
</menu>